feat(ci): run playwright e2e tests in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,58 +40,8 @@ jobs:
             ghcr.io/${{ env.REPO_NAME }}/${{ github.ref_name }}:latest,
             ghcr.io/${{ env.REPO_NAME }}/${{ github.ref_name }}:${{ env.SHA_SHORT }},
 
-  e2e_test:
+  playwright_e2e:
     needs: containerise
-    runs-on: ubuntu-24.04
-    env:
-      USE_ENV_TEST: "1"
-      SECRET_KEY: django-insecure_not-a-secret
-      ALLOWED_HOSTS: 127.0.0.1,::1
-      CSRF_TRUSTED_ORIGINS: http://127.0.0.1
-      DATABASE_URL: postgres://django_e2e_benchmarks:password@host.docker.internal:5432/django_e2e_benchmarks
-    services:
-      postgres:
-        image: postgres:17
-        env:
-          POSTGRES_DB: django_e2e_benchmarks
-          POSTGRES_USER: django_e2e_benchmarks
-          POSTGRES_PASSWORD: password
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    steps:
-      - uses: actions/checkout@v5
-      - uses: astral-sh/setup-uv@v6
-        with:
-          version: "0.6.17"
-      - name: Apply migrations and seed database
-        run: |
-          docker run --rm \
-            --add-host=host.docker.internal:host-gateway \
-            --env USE_ENV_TEST \
-            --env SECRET_KEY \
-            --env ALLOWED_HOSTS \
-            --env CSRF_TRUSTED_ORIGINS \
-            --env DATABASE_URL \
-            ${{ needs.containerise.outputs.image_address }} \
-            /bin/bash -c "python manage.py migrate && python manage.py seed_database"
-      - name: Run webapp in the background
-        run: |
-          docker run --detach \
-            --add-host=host.docker.internal:host-gateway \
-            --env USE_ENV_TEST \
-            --env SECRET_KEY \
-            --env ALLOWED_HOSTS \
-            --env CSRF_TRUSTED_ORIGINS \
-            --env DATABASE_URL \
-            --env PORT=8000 \
-            --publish 8000:8000 \
-            --volume django_e2e_benchmarks_static:/app/static \
-            ${{ needs.containerise.outputs.image_address }}
-      - run: uv sync --group=test
-      - run: uv run playwright install --with-deps chromium
-      - run: uv run pytest tests_e2e/
+    uses: ./.github/workflows/_e2e.yaml
+    with:
+      use_playwright: true
