fix(ci): pass container image address to _e2e workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,10 +44,12 @@ jobs:
     needs: containerise
     uses: ./.github/workflows/_e2e.yaml
     with:
+      image_address: ${{ needs.containerise.outputs.image_address }}
       use_playwright: true
 
   pydoll_e2e:
     needs: containerise
     uses: ./.github/workflows/_e2e.yaml
     with:
+      image_address: ${{ needs.containerise.outputs.image_address }}
       use_pydoll: true
