--- a/.github/workflows/_e2e.yaml
+++ b/.github/workflows/_e2e.yaml
@@ -7,12 +7,16 @@
 #     needs: containerise
 #     uses: ./.github/workflows/_e2e.yaml
 #     with:
+#      image_address: ${{ needs.containerise.outputs.image_address }}
 #       use_playwright: true
 # ```
 
 on:
   workflow_call:
     inputs:
+      image_address:
+        required: true
+        type: string
       use_playwright:
         required: true
         type: boolean
@@ -25,7 +29,6 @@ on:
 jobs:
   e2e:
     runs-on: ubuntu-24.04
-    needs: containerise
     env:
       USE_ENV_TEST: "1"
       SECRET_KEY: django-insecure_not-a-secret
@@ -61,7 +64,7 @@ jobs:
             --env ALLOWED_HOSTS \
             --env CSRF_TRUSTED_ORIGINS \
             --env DATABASE_URL \
-            ${{ needs.containerise.outputs.image_address }} \
+            ${{ inputs.image_address }} \
             /bin/bash -c "python manage.py migrate && python manage.py seed_database"
 
       - name: Run webapp in the background
@@ -76,7 +79,7 @@ jobs:
             --env PORT=8000 \
             --publish 8000:8000 \
             --volume django_e2e_benchmarks_static:/app/static \
-            ${{ needs.containerise.outputs.image_address }}
+            ${{ inputs.image_address }}
 
       - run: uv sync --group=test
 
