fix(ci): make use_playwright/use_pydoll _e2e inputs optional

--- a/.github/workflows/_e2e.yaml
+++ b/.github/workflows/_e2e.yaml
@@ -18,11 +18,11 @@ on:
         required: true
         type: string
       use_playwright:
-        required: true
+        required: false
         type: boolean
         default: false
       use_pydoll:
-        required: true
+        required: false
         type: boolean
         default: false
 
