ci: run e2e tests as part of PR workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,8 @@ jobs:
       - run: |
           echo "REPO_NAME=${GITHUB_REPOSITORY@L}" >> $GITHUB_ENV
           echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-      - id: containerise
+      - name: Containerise
+        id: containerise
         uses: ./.github/actions/containerise
         with:
           dockerfile: _deploy/deploy.Dockerfile
