fix(ci): ensure caller workflow passes secrets to django-checks job

--- a/.github/workflows/_pre-build-checks.yaml
+++ b/.github/workflows/_pre-build-checks.yaml
@@ -18,6 +18,9 @@ on:
           type: string
           default: 'false'
           required: false
+    secrets:
+      DJANGO_SECRET_KEY:
+        required: false
 
 jobs:
   pre_commit:
